Fix layout for classes with unknown source file (e.g. genvector): body's div was closed too early, descrhead alignment was messed up. Use short template names (i.e. without default parameters) where possible. This drastically improves the readability of templates. It also revealed a bug in CINT wrt typedef autoloading; fixing that will make this improvement work for all cases.
git-svn-id: http://root.cern.ch/svn/root/trunk@27561 27541ba8-7e3a-0410-8455-c3a389f83636

--- a/etc/html/ROOT.css
+++ b/etc/html/ROOT.css
@@ -173,7 +173,9 @@ div.clear {
 }
 div.descrhead {
    text-align:right;
-   height: 1.6em;
+   padding: 0;
+   margin: 0;
+   height: 1.5em;
 }
 span.descrtitle {
    display: inline-block;
@@ -186,7 +188,7 @@ div.descrheadcontent {
    display: inline-block;
    text-align: left;
    margin: 0 auto 0 0;
-   padding: 0;
+   padding: 0 0;
    float: left;
 }
 a.descrheadentry {
@@ -196,7 +198,7 @@ a.descrheadentry {
    font-weight: 95%;
    border: none;
    border-left: solid 1px #dddddd;
-   padding: 1px 14px;
+   padding: 0px 14px;
    white-space: nowrap;
    display: inline-block;
    width: 100px;
